# serp-scraper

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  install_service.sh  main.py  pyproject.toml  requirements.txt
api/: API_DOCUMENTATION.md  SERP_API_DOCUMENTATION.md  __init__.py  config.py  deps.py  exceptions.py  main.py
api/cli/: __init__.py  keys.py
api/middleware/: logging_middleware.py  rate_limit.py
api/models/: requests.py  responses.py
api/routers/: __init__.py  fetch.py  health.py  news.py  scholar.py  search.py
api/utils/: __init__.py  compression.py
data/fontconfig/: fonts_windows.conf
serp/: __init__.py  browser_stealth.py  cache.py  cleaning.py  client.py  compression.py  config.py  config_pydantic.py  fetch.py  google_news.py  google_scholar.py  http_search.py  output_formatter.py  parsers.py  py.typed  search.py  simple.py  types.py  utils.py
tests/: conftest.py  test_browser_stealth.py  test_cache.py  test_cleaning.py  test_compression.py  test_google_news.py  test_google_scholar.py  test_output_formatter.py  test_serp.py
