[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serp-scraper"
version = "2.0.15"
description = "SERP scraper with Camoufox, proxy rotation, and stealth browsing"
keywords = [
    "serp", "scraping", "google", "search", "results",
    "camoufox", "firefox", "web-scraping",
    "proxy", "proxy-rotation", "stealth", "browser-automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "camoufox[geoip]>=0.4.0",
    "markdownify>=0.12.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-httpserver>=1.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1.0",
]

[project.urls]
Homepage = "https://github.com/neuronaline/serp-scraper"
Repository = "https://github.com/neuronaline/serp-scraper"
Issues = "https://github.com/neuronaline/serp-scraper/issues"
Changelog = "https://github.com/neuronaline/serp-scraper/blob/main/CHANGELOG.md"

[tool.setuptools]
package-data = {"serp" = ["py.typed"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["serp*", "api*"]
exclude = [
    "tests*",
    "docs*",
    "sample*",
    "venv*",
    "env*",
    ".cache*",
    ".kilo*",
    "main.py",
    "proxies.json",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true